Un toque mas de rup

--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
@@ -65,3 +65,17 @@ Al mismo tiempo cada ciclo de RUP está compuesto por fases y cada una de estas 
 >	- El modelado genera mucho trabajo adicional. 
 >	- Genera muchos costos.
 >	- No recomendable para proyectos pequeños.
+
+Según Martin Fowler sobre RUP:
+El RUP (Rational Unified Process) es un marco de proceso que proporciona un vocabulario y una estructura flexible para discutir y gestionar el desarrollo de software. Cuando se implementa RUP, el primer paso es seleccionar un "caso de desarrollo" adecuado al proyecto específico. Los casos de desarrollo pueden variar significativamente, por lo que es crucial no asumir que todos los proyectos seguirán el mismo patrón. Elegir un caso de desarrollo adecuado requiere la experiencia de alguien profundamente familiarizado con RUP, capaz de adaptar el marco a las necesidades particulares del proyecto. Además, existe un número creciente de casos de desarrollo predefinidos que pueden servir como punto de partida.
+
+RUP es fundamentalmente un proceso iterativo y no es compatible con metodologías en cascada, aunque no es raro encontrar proyectos que intentan adaptar RUP a este estilo, a menudo sin éxito.
+
+El proceso RUP se divide en cuatro fases principales:
+
+1. **Iniciación**: Realiza una evaluación inicial del proyecto para decidir si se deben comprometer los recursos necesarios para una fase de elaboración completa.
+2. **Elaboración**: Define los casos de uso principales y desarrolla iteraciones del software para solidificar la arquitectura del sistema. Al final de esta fase, se deberían haber identificado y resuelto los principales riesgos del proyecto.
+3. **Construcción**: Continúa con el desarrollo del software, añadiendo funcionalidades suficientes para preparar el producto para su lanzamiento.
+4. **Transición**: Incluye actividades que no son iterativas, como el despliegue en el centro de datos, la formación de usuarios, entre otras.
+
+Es importante reconocer que puede haber solapamientos entre las fases, especialmente entre elaboración y construcción. Para algunos, el paso a la fase de construcción marca el inicio de una planificación más predictiva, mientras que para otros, simplemente indica que el proyecto tiene una arquitectura estable y un conjunto claro de requisitos que probablemente perdurarán hasta el final del proyecto.
