Uniendo RUP y acomodando redacción | MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 1/1. Procesos de Software.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 1/1. Procesos de Software.md
@@ -13,8 +13,7 @@ La definición de lo que es un proceso en el campo de la ingeniería de software
 - **Validación del software**: Hay que validar el software para asegurarse de que cumple lo que el cliente quiere.
 - **Evolución del software**: El software tiene que evolucionar para satisfacer las necesidades cambiantes del cliente,
 
-Un buen proceso de software debe especificar ***la secuencia de actividades a realizar*** por el equipo de desarrollo, es decir, el flujo de actividades. ***Los productos*** que deben crearse, ya sea los resultados de una actividad a través del desarrollo o del diseño de una arquitectura específica. ***La asignación de tareas*** a los miembros del equipo, como así también roles y responsabilidad dentro del mismo. Y por último ***los criterios para controlar el proceso***, estableciendo hitos (Acontecimientos puntuales y significativos) y una serie de controles de gestión de los proyectos de software.
-Es muy importante contar con un proceso de software, ya que nos ayuda a:
+Un buen proceso de software debe especificar ***la secuencia de actividades a realizar*** por el equipo de desarrollo, es decir, el flujo de actividades. ***Los productos*** que deben crearse, ya sea los resultados de una actividad a través del desarrollo o del diseño de una arquitectura específica. ***La asignación de tareas*** a los miembros del equipo, como así también roles y responsabilidad dentro del mismo. Y por último ***los criterios para controlar el proceso***, estableciendo hitos (Acontecimientos puntuales y significativos) y una serie de controles que ayuden a realizar la gestión de los proyectos de software. Los procesos de software son muy importantes, ya que nos ayuda a:
 
 - Facilita la gestión del proyecto.
 - Establece una división del trabajo.
@@ -25,6 +24,6 @@ Es muy importante contar con un proceso de software, ya que nos ayuda a:
 - Gestiona el cambio adecuadamente.
 - Asegura la calidad.
 
-Cuando un proceso implica la construcción de algún producto, suele referirse al proceso como un [[1. Modelos de Ciclo de Vida|Ciclo de Vida]]. Los proyectos de software se desarrollan en una serie de ***fases***, que van desde la *concepción del software* y su desarrollo inicial hasta su *puesta en funcionamiento* y posterior retirada por otra nueva generación de software.
+Cuando un proceso se implica a la construcción de algún producto, suele referirse al proceso como un [[1. Modelos de Ciclo de Vida|Ciclo de Vida]]. Los proyectos de software se desarrollan en una serie de ***fases***, que van desde la *concepción del software* y su desarrollo inicial hasta su *puesta en funcionamiento* y posterior retirada por otra nueva generación de software.
 En este contexto, un ***modelo de proceso software*** es una representación abstracta y simplificada de un proceso de software, los cuales ofrecen un marco de definición para el proceso, pero no detallan las actividades específicas. Cabe aclarar no son descripciones definitivas de los procesos software, más bien una abstracción útil que puede servir a la hora de desarrollar software.
 A lo largo de los años surgieron diversos [[2. Tipos de Modelos de Ciclo de Vida|Tipos de Modelos de Ciclo de Vida]], los cuales plantean diferentes enfoques a la hora de desarrollar software y de llevar adelante el desarrollo de un programa.
