--- a/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
@@ -3,8 +3,7 @@
 Los requerimientos especifican qué es lo que el sistema debe hacer, es decir, sus funciones, sus propiedades esenciales y deseables. Un requerimiento expresa el propósito del sistema sin considerar como se va a implantar.
 
 >[!tldr] El Análisis de Requerimientos
->Es un conjunto de técnicas y procedimientos que nos permiten conocer los elementos necesarios para definir un proyecto de software.
->El análisis de requerimientos proporciona una vía para que los clientes y los desarrolladores lleguen a un acuerdo sobre lo que debe hacer el sistema. La especificación, producto de este análisis proporciona las pautas a seguir a los diseñadores del sistema.
+>Nos referimos al análisis de requerimientos al conjunto de técnicas y procedimientos que nos permiten conocer los elementos necesarios para definir un proyecto de software. El análisis de requerimientos proporciona una vía para que los clientes y los desarrolladores lleguen a un acuerdo sobre lo que debe hacer el sistema. La especificación, producto de este análisis proporciona las pautas a seguir a los diseñadores del sistema.
 
 ## Aspectos de un Requerimiento
 
@@ -40,15 +39,15 @@ Las características que debe tener un buen requerimiento está definido en su e
 El Análisis de Requerimientos es un proceso al cual Sommerville, llama ***Ingeniería de Requerimientos*** cuya meta es crear y mantener un documento de requerimientos del sistema. Este proceso general consta de cuatro subprocesos:
 
 - ***El estudio de viabilidad***, que evalúa si el sistema contribuye con los objetivos de la organización, y por ende es útil para el negocio. Por lo general, este proceso suele ser corto, y cuyo resultado es un informe que nos sirve para determinar si un requerimiento es adecuado o necesita cambios. 
-- ***Obtención y análisis de requerimientos***.
+- ***Obtención y análisis de requerimientos***, cosiste en captar las necesidades de los distintos usuarios que utilizaran el sistema final.
 - ***Especificación de requerimientos***, consiste en la transformación de los requerimientos en formularios estándar que definen, de forma completa, precisa y verificable, los requisitos, el diseño y el comportamiento u otras características, de un sistema o componente de un sistema. Una buena especificación de requerimientos debe procurar:
 	1. **Separar funcionalidad de implementación**: Una especificación es una descripción de lo que se desea, en vez de cómo se realiza. Esto en la práctica puede llegar a no suceder del todo; sin embargo, es un buen lineamiento a seguir.
 	2. **Una especificación debe abarcar el entorno en el que el sistema opera**: El entorno en el que opera el sistema y con el que interactúa debe ser especificado.
 	3. **Debe ser modificable**: Ninguna especificación puede ser siempre totalmente completa. El entorno en el que existe es demasiado complejo para ello. Una especificación es un modelo, una abstracción, de alguna situación real, por tanto, será incompleta. Además, al ser formulada existirán muchos niveles de detalle.
-- ***Validación***: verificar que los requerimientos realmente definen el sistema que quiere el cliente. Los requerimientos deben ser validados para poder:
+- ***Validación***, consiste en verificar que los requerimientos realmente definen el sistema que quiere el cliente. Los requerimientos deben ser validados para poder:
 	- Asegurar que los ingenieros de software los han comprendido.
 	- Garantizar que el documento de especificación de requerimientos de software es comprensible, consistente, completo y conforme a los estándares establecidos.
-	- Asegurar que el documento de especificación de requerimientos define el software adecuado, es decir, el que espera el usuario.
+	- Asegurar que el documento de especificación de requerimientos define el software adecuado, que espera el usuario.
 	- Las principales técnicas de validación:
 		- Revisiones: Un grupo de personas lee, analiza, discute el documento de SRS y las formas de solucionar los problemas detectados, es por esta razón que deben participar representantes del cliente y los usuarios.
 		- Prototipado: Se crean versiones del producto y se los da a testear al cliente para recibir una retroalimentación temprana.
