--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. Proceso Unificado de Racional (RUP).md
@@ -1,6 +1,6 @@
 La utilización de metodologías para el desarrollo de aplicaciones es casi imposible de omitir en la actualidad, debido a la gran necesidad de control de variables que conlleva el mismo desarrollo, y para la ordenada elaboración de las aplicaciones, por lo tanto, seguir una metodología y estándares nos llevan a estar en competitividad en todo momento. Las metodologías, los estándares y las herramientas siguen un único propósito, el cual consiste en la elaboración de aplicaciones de manera eficiente, ordenada y con el menor número de defectos.
-En este contexto, ***RUP*** surge como una de las metodologías estándares más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos. RUP es producto del proceso de ingeniería de software, que proporciona un enfoque disciplinado para asignar tareas y responsabilidades dentro de una organización del desarrollo. Su meta es asegurar la producción del software de alta calidad que resuelve las necesidades de los usuarios dentro de un presupuesto y tiempo establecidos. Además, proporciona una serie de disciplinas en las cuales guían el proceso de documentación e implementación, asimismo cuenta con guías para un buen desarrollo, todo ellas dentro de las respectivas fases con las cuales cuenta.
-
+En este contexto, ***RUP*** surge como una de las metodologías estándares más utilizadas para el análisis, implementación y documentación de sistemas orientados a objetos. RUP es un marco de proceso que proporciona un vocabulario y una estructura flexible para discutir y gestionar el desarrollo de software. Cuando se implementa RUP, el primer paso es seleccionar un ***caso de desarrollo*** para el proyecto específico, elegir un caso de desarrollo adecuado requiere la experiencia de alguien profundamente familiarizado con RUP, capaz de adaptar el marco a las necesidades particulares del proyecto, ya que cada proyecto es diferente y posee características particulares.
+El principal objetivo de esta metodología es asegurar la producción del software de alta calidad que resuelve las necesidades de los usuarios dentro de un presupuesto y tiempo establecidos.
 ### Dimensiones del Modelo
 
 El RUP tiene dos dimensiones, el eje horizontal representa tiempo y demuestra los aspectos del ciclo de vida del proceso, esta dimensión es dinámica. Mientras que el eje vertical representa las disciplinas, que agrupan actividades definidas lógicamente por la naturaleza, esta dimensión es estática, ya que las disciplinas siempre serán las mismas.
@@ -8,6 +8,7 @@ El RUP tiene dos dimensiones, el eje horizontal representa tiempo y demuestra lo
 ![[dimensiones_RUP.png]]
 
 En la figura se puede observar como varía el énfasis de cada disciplina en un cierto plazo en el tiempo, y durante cada una de las fases. Por ejemplo, en iteraciones tempranas, pasamos más tiempo en requerimientos, y en las últimas iteraciones pasamos más tiempo en poner en práctica la realización del proyecto en sí. 
+RUP proporciona una serie de disciplinas que guían el proceso de documentación e implementación, asimismo cuenta con guías para un buen desarrollo, todo ellas dentro de las respectivas fases con las cuales cuenta.
 
 | Flujos de Trabajo                      | Tareas a Realizar                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
 | -------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -28,7 +29,7 @@ En cuanto a la perspectiva práctica, se recomiendan seis buenas prácticas acon
 1. **Desarrollar el software de forma iterativa**: Planifica incrementos del sistema basándose en las prioridades del usuario y desarrollo. Entregar las características del sistema que tengan la más alta prioridad al inicio del proceso de desarrollo. 
 2. **Gestionar los requerimientos**: Documenta explícitamente los requerimientos del cliente y se mantiene al tanto de los cambios en estos requerimientos. Analizar el impacto de los cambios en el sistema antes de aceptarlos.
 3. **Utilizar arquitecturas basadas en componentes**: Estructura la arquitectura del sistema en componentes reutilizables en la mayor medida posible.
-4. **Modelar el software visiblemente**: Utiliza modelos gráficos UML para presentar vistas estáticas y dinámicas del software. 
+4. **Modelar el software de forma gráfica**: Utiliza modelos gráficos UML para presentar vistas estáticas y dinámicas del software. 
 5. **Verificar la calidad del software**: Asegura que el software cumple con los estándares de calidad de la organización.
 6. **Controlar los cambios del software**: Gestiona los cambios del software usando un sistema de gestión de cambios y procedimientos, también herramientas de gestión de configuraciones. 
 
@@ -49,9 +50,11 @@ Al mismo tiempo cada ciclo de RUP está compuesto por fases y cada una de estas 
 
 
 1. **Inicio**: Se define el ámbito y objetivos del proyecto, al igual que la funcionalidad y capacidades del producto.
-2. **Elaboración**: Tanto la funcionalidad como el dominio del problema se estudian en profundidad. Se define una arquitectura básica y se planifica el proyecto considerando recursos disponibles, para finalizar con la creación de los casos de uso.
-3. **Construcción**: El producto se desarrolla a través de iteraciones donde cada iteración involucra tareas de análisis, diseño e implementación de los modelos del sistema. En esta fase se refina la arquitectura de manera incremental conforme se construye el sistema (se permiten cambios en la estructura). Gran parte del trabajo es programación y pruebas. Se documenta tanto el sistema construido como el manejo del mismo. El resultado de esta fase es un producto funcional junto con la documentación.
-4. **Transición**: Se libera el producto y se entrega al usuario para un uso real. Se incluyen tareas de marketing, empaquetado atractivo, instalación, configuración, entrenamiento, soporte, mantenimiento, entre otras. Los manuales de usuario se completan y refinan con la información anterior, estas tareas se realizan también en iteraciones.
+2. **Elaboración**: Tanto la funcionalidad como el dominio del problema se estudian en profundidad. Se definen los casos de usos principales, la arquitectura básica del sistema y se planifica el proyecto considerando recursos disponibles.
+3. **Construcción**: El producto se desarrolla a través de iteraciones donde cada iteración involucra tareas de análisis, diseño e implementación de los modelos del sistema. En esta fase se refina la arquitectura, permitiendo cambios en la estructura del programa. Gran parte del trabajo es programación y pruebas, aunque también se documenta tanto el sistema construido como el manejo del mismo. El resultado de esta fase es un producto funcional junto con la documentación.
+4. **Transición**: Se entrega el producto al usuario para un uso real. Se incluyen tareas de marketing, empaquetado atractivo, instalación, configuración, capacitación técnica, soporte, mantenimiento, entre otras.
+
+Es importante reconocer que puede haber solapamientos entre las fases, especialmente entre elaboración y construcción. Para algunos, el paso a la fase de construcción marca el inicio de una planificación más predictiva, mientras que para otros, simplemente indica que el proyecto tiene una arquitectura estable y un conjunto claro de requisitos que probablemente perdurarán hasta el final del proyecto.
 
 >[!tldr] Ventajas y Desventajas del Modelo
 >- **Ventajas**:
@@ -66,16 +69,3 @@ Al mismo tiempo cada ciclo de RUP está compuesto por fases y cada una de estas 
 >	- Genera muchos costos.
 >	- No recomendable para proyectos pequeños.
 
-Según Martin Fowler sobre RUP:
-El RUP (Rational Unified Process) es un marco de proceso que proporciona un vocabulario y una estructura flexible para discutir y gestionar el desarrollo de software. Cuando se implementa RUP, el primer paso es seleccionar un "caso de desarrollo" adecuado al proyecto específico. Los casos de desarrollo pueden variar significativamente, por lo que es crucial no asumir que todos los proyectos seguirán el mismo patrón. Elegir un caso de desarrollo adecuado requiere la experiencia de alguien profundamente familiarizado con RUP, capaz de adaptar el marco a las necesidades particulares del proyecto. Además, existe un número creciente de casos de desarrollo predefinidos que pueden servir como punto de partida.
-
-RUP es fundamentalmente un proceso iterativo y no es compatible con metodologías en cascada, aunque no es raro encontrar proyectos que intentan adaptar RUP a este estilo, a menudo sin éxito.
-
-El proceso RUP se divide en cuatro fases principales:
-
-1. **Iniciación**: Realiza una evaluación inicial del proyecto para decidir si se deben comprometer los recursos necesarios para una fase de elaboración completa.
-2. **Elaboración**: Define los casos de uso principales y desarrolla iteraciones del software para solidificar la arquitectura del sistema. Al final de esta fase, se deberían haber identificado y resuelto los principales riesgos del proyecto.
-3. **Construcción**: Continúa con el desarrollo del software, añadiendo funcionalidades suficientes para preparar el producto para su lanzamiento.
-4. **Transición**: Incluye actividades que no son iterativas, como el despliegue en el centro de datos, la formación de usuarios, entre otras.
-
-Es importante reconocer que puede haber solapamientos entre las fases, especialmente entre elaboración y construcción. Para algunos, el paso a la fase de construcción marca el inicio de una planificación más predictiva, mientras que para otros, simplemente indica que el proyecto tiene una arquitectura estable y un conjunto claro de requisitos que probablemente perdurarán hasta el final del proyecto.
