--- a/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
@@ -1,12 +1,12 @@
-Las personas construyen modelos para ayudar al usuario a visualizar el producto final. Estos modelos son una simplificación de la realidad y proporciona los planos de un sistema, los cuales van escalando en complejidad mientras más complejo sea el proceso de construcción que se esté modelando, es decir, la complejidad depende directamente de la dificultad del proceso para realizar de dicho sistema.
-Los modelos se construyen para comprender mejor el sistema que se está desarrollando. A través de estos modelos se consigue: 
+Las personas construyen modelos para ayudar al usuario a visualizar el producto final. Estos modelos son una simplificación de la realidad y proporciona los planos de un sistema, los cuales van escalando en complejidad mientras más complejo sea el proceso de construcción que se esté modelando, es decir, la complejidad depende directamente de la dificultad del proceso empleado para realizar dicho sistema.
+Los modelos se construyen para comprender mejor el sistema que se está desarrollando. A través de estos modelos se consigue:
 
 1. Visualizar como es o queremos que sea un sistema. 
 2. Deja especificada la estructura o el comportamiento de un sistema. 
 3. Proporcionar plantillas que nos guían en la construcción de un sistema. 
 4. Documentar las decisiones que se han adoptado.
 
-Cuando más grande y complejo es el sistema, el modelado se hace más importante, ya que no podemos comprender el sistema en su totalidad, lo que nos permite realizar los modelos es dividir el problema base que soluciona el sistema en subproblemas, haciendo más sencilla su comprensión y resolución. El modelado es esencial en la construcción del software porque nos permite:
+Cuando más grande y complejo es el sistema, el modelado se hace más importante, ya que es imposible comprender el sistema en su totalidad. Los modelos permiten dividir el problema base que soluciona el sistema en subproblemas, haciendo más sencilla su comprensión y resolución. El modelado es esencial en la construcción del software porque nos permite:
 
 1. Comunicar la estructura de un sistema complejo. 
 2. Especificar el comportamiento deseado del sistema. 
@@ -15,12 +15,12 @@ Cuando más grande y complejo es el sistema, el modelado se hace más importante
 
 ### Lenguaje Unificado de Modelado (UML)
 
-El que es UML, para qué sirve, sumado a todas sus características y distintos diagramas, están explicados más a detalle en la [[1. Lenguaje Unificado de Modelado - UML|Unidad 7]] de metodología de sistemas I. Lo importante es que UML no es una metodología, más bien es un metalenguaje independiente tanto de la metodología empleada como del lenguaje de programación en el que se realice la implementación.
+El que es UML, para qué sirve, sumado a todas sus características y distintos diagramas, están explicados más a detalle en la [[1. Lenguaje Unificado de Modelado - UML|Unidad 7]] de metodología de sistemas I. Lo importante es que UML no es una metodología, más bien es un metalenguaje independiente de la metodología empleada y del lenguaje de programación en el que se realice la implementación.
 El modelo UML consta de 5 tipos de vistas y 9 tipos de diagramas, estos diagramas expresan gráficamente partes de un modelo.
 
 ![[diagramas_uml.png]]
 
-La finalidad de los diagramas es presentar diversas perspectivas de un mismo sistema. Es importante destacar que el Modelo UML describe lo que supuestamente hará un Sistema, pero no dice como implementar dicho sistema.
-La razón por la que existen tantos diagramas UML es porque le permite a las partes involucradas examinar un sistema desde distintos puntos de vista, esto es de suma importancia porque el proceso de construcción del sistema involucra a diferentes personas, los cuales tienen enfoques particulares en diferentes aspectos del sistema, en sí el objetivo es satisfacer a cada Persona involucrada. Recordemos que nuestro proceso para desarrollar software consiste de los siguientes pasos.
+La finalidad de los diagramas es presentar diversas perspectivas de un mismo sistema. Es importante destacar que el Modelo UML describe lo que supuestamente hará un sistema, pero no dice como implementar este mismo.
+La razón por la que existen tantos diagramas UML es porque le permite a las partes involucradas examinar un sistema desde distintos puntos de vista, esto es de suma importancia porque el proceso de construcción del sistema involucra a diferentes personas, los cuales tienen enfoques particulares y diferentes puntos de vistas del sistema, en sí el objetivo es satisfacer a cada persona involucrada. Recordemos que nuestro proceso para desarrollar software consiste de los siguientes pasos.
 
 ![[proceso-desarrollo.png]]
