--- a/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/1. Modelado de Software y UML.md
@@ -19,8 +19,6 @@ El que es UML, para qué sirve, sumado a todas sus características y distintos 
 El modelo UML consta de 5 tipos de vistas y 9 tipos de diagramas, estos diagramas expresan gráficamente partes de un modelo.
 
 ![[diagramas_uml.png]]
-
-La finalidad de los diagramas es presentar diversas perspectivas de un mismo sistema. Es importante destacar que el Modelo UML describe lo que supuestamente hará un sistema, pero no dice como implementar este mismo.
+La finalidad de los diagramas es presentar diversas perspectivas de un mismo sistema. Es importante destacar que el Modelo UML describe lo que supuestamente hará un sistema, pero no dice como implementar esté mismo.
 La razón por la que existen tantos diagramas UML es porque le permite a las partes involucradas examinar un sistema desde distintos puntos de vista, esto es de suma importancia porque el proceso de construcción del sistema involucra a diferentes personas, los cuales tienen enfoques particulares y diferentes puntos de vistas del sistema, en sí el objetivo es satisfacer a cada persona involucrada. Recordemos que nuestro proceso para desarrollar software consiste de los siguientes pasos.
-
 ![[proceso-desarrollo.png]]
