--- a/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
@@ -1,11 +1,11 @@
 Como ya mencionamos, un diagrama es una presentación gráfica de un conjunto de elementos, donde la mayoría de las veces se dibuja como un grafo conexo de nodos y arcos. Estos diagramas se utilizan para visualizar un sistema desde diferentes perspectivas.
-En UML se utilizan cinco vistas para visualizar, especificar, construir y documentar una arquitectura de software.
+En UML se utilizan **cinco vistas** para visualizar, especificar, construir y documentar una arquitectura de software.
 ## Vista de Usuario
-
 ### Diagrama de Casos de Uso
 
-Los ***casos de uso*** son una técnica para capturar información de cómo un sistema o negocio trabaja, o de cómo se desea que trabaje. Ayuda a obtener requerimientos desde el punto de vista del Usuario, los cuales son considerados actores, modelando la funcionalidad del sistema.
-No pertenece estrictamente al enfoque orientado a objeto, pero es una técnica para captura de requerimientos que ayuda al analista a comprender la forma en que un sistema deberá comportarse. Los casos de usos constan de los siguientes elementos:
+Los ***casos de uso*** son una técnica para capturar información de cómo un sistema o negocio trabaja, o de cómo se desea que trabaje. Ayuda a obtener requerimientos desde el punto de vista del Usuario, los cuales son considerados actores, modelando la funcionalidad del sistema. 
+No pertenece estrictamente al enfoque orientado a objeto, es una técnica para captura de requerimientos. Es un poderoso concepto que ayuda al analista a comprender la forma en que un sistema deberá comportarse. 
+Los casos de usos constan de los siguientes elementos:
 
 - **Actor:** Representa el rol que juega un usuario con respecto al sistema. Un actor no necesariamente representa a una persona en particular, sino más bien la labor que realiza frente al sistema, es decir, un actor es toda aquella entidad que interactúa con el sistema, estos pueden ser personas o incluso otros sistemas. La forma de representarlos es mediante un monigote de palos.
 - **Caso de Uso:** Operación o tarea específica que se realiza tras una orden de algún agente externo, originada por una petición de un actor o bien por la invocación desde otro caso de uso. Los casos de usos se representan mediante óvalos que contiene el nombre del caso de uso.
@@ -17,7 +17,6 @@ Los casos de usos y los actores interactúan entre sí a través de relaciones, 
 	- **Inclusión:** Permite utilizar los pasos de un Caso de Uso dentro de otro, logrando factorizar un comportamiento en un caso de uso aparte y evitar repetir un mismo flujo en diferentes casos de uso. Incluye la funcionalidad de un Caso de Uso en otro. 
 	- **Extensión:** Un caso de uso base incorpora implícitamente el comportamiento de otro caso de uso en el lugar especificado indirectamente por este otro caso de uso. Extiende la funcionalidad de un Caso de Uso a otro bajo unas condiciones, esto quiere decir que no siempre va a utilizar la secuencia de ese caso.
 - **Generalización:** Los casos de uso y los actores pueden heredar características entre sí. El Caso de Uso secundario hereda las acciones y significados del Primario, y además agrega sus propias acciones.
-
 ![[caso_uso_ejemplo.png]]
 
 >[!tldr] Organización de los Casos de Uso
@@ -28,78 +27,54 @@ Los casos de usos y los actores interactúan entre sí a través de relaciones, 
 
 Todos los casos de usos quedan documentados formalmente a través de su ***especificación***, esta puede realizarse de diversas maneras, generalmente se emplean tablas con distintos campos donde se va documentando a detalle todos los aspectos relacionados con ese caso de uso particular.
 ## Vista de Comportamiento
-
 ### Diagrama de Actividad
-
 Es un tipo de diagrama de flujo que describe el orden de las actividades de un proceso. Describen las actividades que ocurren dentro de un Caso de Uso. Ha sido diseñado para mostrar una visión dinámica simplificada de lo que ocurre dentro de un proceso u operación. Este diagrama es una extensión del ***Diagrama de Estado***.
 Los diagramas de actividad constan con los siguientes elementos:
-
 ![[elementos_diagrama_actividades.png]]
-
 - **Decisiones en el Diagrama de Actividades:** Casi siempre en un Diagrama de Actividades se llegará a un punto donde se realizará alguna decisión de tipo excluyente, donde solo se pueda ir por un solo camino, esta situación se puede representar de dos formas: 
 	1. Mostrar las rutas posibles que parten directamente una actividad. 
 	2. Llevar la transición hacia un rombo y de allí direccionar a las diferentes decisiones. 
 - **Rutas Concurrentes**: Conforme como se modele las actividades, se tendrá la oportunidad de separar la transición en dos rutas que se ejecutan al mismo tiempo y luego se reúna.
-
 ![[rutas_concurrentes_actividades.png]]
-
 - **Indicaciones:** Es posible enviar una indicación. Cuando se reciba, la indicación provocará que se ejecute una actividad. El símbolo para enviar la indicación es un pentágono convexo y el que recibe un pentágono cóncavo.
-
 ![[indicaciones_actividades.png]]
-
 >[!caution] Consideraciones a Tener en Cuenta
 >- Las actividades se reparten entre los diferentes actores que interactúen en ese caso, estos actores se colocan de forma horizontal en la parte superior del diagrama y se coloca una línea vertical para delimitar las actividades realizadas por cada actor.
 >- Todo el diagrama fluye de forma descendente.
 >- Las salidas de una bifurcación condicional siempre deben ir hacia una actividad, no se puede ir de un condicional a otro.
 >- En los condicionales la secuencia del "Si" siempre se coloca hacia abajo y el "No" va a depender, en caso de que se necesite retornar a actividades anteriores el "*No*" sale por la izquierda del rombo, pero en el caso de que dicha secuencia tenga un desarrollo más elaborado que involucre una serie de actividades, entonces el flujo saldrá por la derecha.
 >- Una subdivisión no puede ir directamente a una bifurcación, siempre debe haber una actividad de por medio que lleve a la bifurcación.
-
 ### Diagrama de Secuencias
-
-Es un diagrama de interacción que muestra como se comunican los distintos objetos que forman parte del sistema entre si durante el transcurso del tiempo.
-
+Es un diagrama de interacción que muestra como se comunican los distintos objetos que forman parte del sistema entre sí durante el transcurso del tiempo.
 ![[elementos_secuencias.png]]
-
-
 - **Estímulos**: Son las comunicaciones existentes entre un objeto y otro. Los estímulos pueden ser: 
 	- **Simple:** La transferencia normal del control entre un Objeto a otro.
 	- **Sincrónico:** Espera la respuesta de un mensaje antes de continuar con su trabajo. 
 	- **Asincrónico:** No espera respuesta de un mensaje para continuar con su trabajo. 
 - **Tiempo**: Representa la duración de la ejecución de un mensaje, esta se representa con una barra vertical punteada que puede mostrar el estado de un objeto. 
-
 Por su parte, la dimensión horizontal muestra la disposición de los objetos y la dimensión vertical muestra el paso del tiempo. 
-
 ### Diagrama de Colaboración
-
 Este diagrama es similar al Diagrama de Secuencia, pero muestra la forma en cómo los objetos colaboran entre sí, resaltando la organización de los objetos que participan en una interacción y sus relaciones. Cuenta con dos características que lo diferencia del Diagrama de Secuencia:
 - **Camino:** Indica como están enlazados los distintos objetos. 
-- **Número de Secuencia**: Indica el orden temporal de los mensajes, se precede de un número y que incrementa secuencialmente por cada nuevo mensaje en el flujo de control. También se cuenta la representación por anidamiento, utilizando la numeración decimal de Dewey. 
-
+- **Número de Secuencia**: Indica el orden temporal de los mensajes, se precede de un número y que incrementa secuencialmente por cada nuevo mensaje en el flujo de control. También se cuenta la representación por anidamiento, utilizando la numeración decimal de Dewey.
 ![[ejemplo_colaboracion1.png]]
-
 >[!tldr] Principales Diferencias entre el Diagrama de Secuencia y el de Colaboración
 >Mientras el diagrama de secuencia muestra la sucesión de las interacciones que ocurre en un caso de uso, el diagrama de colaboración muestra el contexto y la organización general de los Objetos que interactúan. Además, el diagrama de secuencia está organizado basándose en el tiempo, mientras que el de colaboración se organiza de acuerdo al espacio. 
 >
-
 ### Diagrama de Estado
-
 Muestra el conjunto de estados por los cuales pasa un objeto durante su vida en una aplicación. Representa los estados en los que puede encontrarse un objeto, junto con las transiciones entre estos estados, y muestro los puntos inicial y final de una secuencia de cambios de estados.
+
 Un ***estado de acción*** se puede ver como un caso especial de un estado de actividad. Es usado para mostrar la vida de un objeto determinado a través de todo el sistema, los eventos causan una transición de un estado a otro, y las acciones que resultan del cambio de estado. Los Elementos de un Estado son: 
 - **Estado:** Es una condición o situación en la vida de un objeto durante la cual se satisface alguna condición, realiza alguna actividad o espera algún evento. 
 - **Evento:** Es la especificación de un acontecimiento significativo que ocupa un lugar en el espacio y en el tiempo. 
 - **Transición:** Es la relación entre dos estados, en la que se indica cómo se pasa de uno a otro.
 - **Actividad:** Ejecución atómica en curso dentro de una máquina de estado. 
 - **Acción:** Computación atómica ejecutable que produce un cambio de estado en el modelo o devuelve un valor. Estas acciones pueden ser: De entrada, salida y durante la actividad.
-
 ![[ejemplo_estado.png]]
-
 ## Vista Estructural
 ### Diagrama de clases
-
  Un diagrama de clases es un diagrama de estructura estática que describe la estructura de un sistema mostrando las clases del sistema, sus atributos, operaciones, y sus relaciones con otras clases. Es el diagrama más importante en la orientación a objetos, porque constituye la guía para convertir el diseño lógico a código. El diagrama de clases cuenta con los siguientes componentes:
-
 ![[componentes_clases.png]]
-
 - **Clase:** Las clases están compuestas por nombres, generalmente expresados en singular, atributos, y métodos, dichos métodos tienen diferentes tipos de accesibilidad (privada, pública y protegida)
 - **Paquetes:** Agrupan lógicamente las clases que tienen alguna relación entre sí. Estas clases se pueden agrupar de acuerdo a sus funcionalidades o basándose en como está compuesta la aplicación
 - **Relaciones:** Las clases pueden conectarse con otras clases de diferentes formas, estas conexiones se llaman relaciones. 
@@ -109,21 +84,16 @@ Un ***estado de acción*** se puede ver como un caso especial de un estado de ac
 	- **Composición:** Es una relación de agregación fuertemente ligada, es decir, que por lo menos debe existir un objeto de la clase contenida en la clase contenedora para que exista la relación.
 	- **Asociación:** Cuando los objetos de una clase tienen alguna referencia con objetos de otra clase, se utiliza una relación de asociación. La relación de Asociación debe tener: 
 		1. **Dirección:** Indica qué clase tiene la referencia a qué clase, si no hay flecha indica que las dos clases se conocen entre sí. 
-		2. **Multiplicidad:** Indica cuantos de esos objetos de esa clase pueden ser instaciados dentro de un objeto de otro tipo.
+		2. **Multiplicidad:** Indica cuantos de esos objetos de esa clase pueden ser instanciados dentro de un objeto de otro tipo.
 		3. **Nombre:** Sirve para identificar la relación en el diagrama.
-
 ### Diagrama de Objetos
-
 Un diagrama de objetos es un gráfico de instancias, el cual incluye objetos y datos. Un diagrama de objetos es una instancia de un diagrama de clases; muestra una 'foto' del estado de un sistema en un punto de tiempo determinado. Se utilizan para validar el modelo del dominio. Para ello es necesario ejecutar los siguientes pasos: 
-
 1. Elegir uno o más casos de uso que estén altamente relacionados con el modelo del dominio. 
 2. Elegir uno o más escenarios de los casos de uso seleccionados en el punto anterior. Es recomendable elegir escenarios que exploren diferentes situaciones.
 3. Ir a través de cada escenario en forma separada, y construir los objetos con los datos mencionados en el escenario.
 4. Comparar cada diagrama de objetos con el modelo del dominio para analizar si se han violado algunas restricciones.
-
 ## Vista de Implementación
 ### Diagrama de Componentes
-
 En este modelo los componentes son cualquier tipo de archivo, ya sea de texto o ejecutable que estén en una computadora. Los Diagramas de Componentes se utilizan para:
 
 - Los clientes puedan ver la estructura del sistema finalizado. 
@@ -140,13 +110,8 @@ Los Diagramas de Componentes se utilizan para ***modelar código fuente***, ***m
 	- **Documento**: Especifica un Componente que representa un documento. 
 - **Dependencias entre Componentes:** La dependencia entre dos componentes se muestra como una flecha punteada. La dependencia quiere decir que una componente necesita de la otra para completar su definición, es decir, Servicios ofrecidos por otro Componente.
 - **Subsistemas:** Los distintos componentes pueden agruparse en paquetes según un criterio lógico y con vistas a simplificar la implementación.
-
 ![[ejemplo_componentes.png]]
-
 ## Vista de Ambiente
 ### Diagrama de Despliegue o Distribución
-
 Los ***diagramas de despliegue o distribución*** muestran la disposición física de los distintos nodos que componen un sistema y el reparto de los componentes sobre dichos nodos, modelando la topología del hardware sobre el que se ejecuta el Sistema Software.  Este tipo de diagramas suele utilizarse para modelar *sistemas distribuidos* o *sistemas empotrados*. 
-Representa los dispositivos y equipos mostrando sus interconexiones y el software que se encuentra en cada máquina. Además de modelar la distribución en tiempo de ejecución de los elementos de procesamiento y componentes de software, junto a los procesos y objetos asociados. Esta vista permite determinar las consecuencias de la distribución y la asignación de recursos.
-![[ejemplo_distribucion.png]]
- 
+Representa los dispositivos y equipos mostrando sus interconexiones y el software que se encuentra en cada máquina. Además de modelar la distribución en tiempo de ejecución de los elementos de procesamiento y componentes de software, junto a los procesos y objetos asociados. Esta vista permite determinar las consecuencias de la distribución y la asignación de recursos. ![[ejemplo_distribucion.png]]
